crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__non-standard-file-extension_my__dir__to__file.f95.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
S091 file extension should be '.f90' or '.F90'
--> my/dir/to/file.f95:1:1
